# sndio

./: meson.build  meson_options.txt  version.h
libsndio/: meson.build
sndiod/: meson.build
